--- a/css/styles.css
+++ b/css/styles.css
@@ -6,8 +6,64 @@
 }
 
 body {
+    width: 100vw;
+    height: 100vh;
     background-color: brown;
     color: beige;
+}
+
+.caja{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+
+.titulo{
+    margin: 30px;
+    padding: 50px;
+}
+
+.parrafo{
+    margin: 2px;
+    padding: 10px;
+    font-size: 2rem;
+}
+
+.formulario{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.input{
+    margin: 10px;
+    padding: 10px;
+    font-size: 2rem;
+    border: 2px solid beige;
+    border-radius: 10px;
+    background-color: brown;
+}
+
+.button{
+    margin: 10px;
+    padding: 10px;
+    border: 0;
+    line-height: 1;
+    background-color: beige;
+    color: brown;
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: .5rem;
+    cursor: pointer;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.tocar{
+    font-size: 1.5rem;
+    color: beige;
+    text-decoration: none;
 }
 
 header {
@@ -26,11 +82,6 @@ header {
 
 h1{
     font-size: 3rem;
-}
-
-.parrafo{
-    padding: 10px;
-    font-size: 2rem;
 }
 
 main {
@@ -123,19 +174,6 @@ h2 {
     background-color: beige;
     border-radius: .25rem;
     padding-inline: .25rem;
-}
-
-.button {
-    border: 0;
-    line-height: 1;
-    background-color: beige;
-    color: brown;
-    font-size: 1rem;
-    padding: .5rem;
-    border-radius: .5rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 600;
 }
 
 .disabled {
