--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;600&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Heebo', sans-serif;
+    font-family: 'DynaPuff', cursive;
 }
 
 body {
@@ -12,85 +14,41 @@ body {
     color: beige;
 }
 
-.caja{
+header {
     display: flex;
     flex-direction: column;
     align-items: center;
-    
+    padding: 2rem;
+    background-color: beige;
+    color: brown;
+    border-bottom-left-radius: 3rem;
+    border-bottom-right-radius: 3rem;
+    border-top-right-radius: 3rem;
+    border-top-left-radius: 3rem;
 }
 
 .titulo{
-    margin: 30px;
-    padding: 50px;
+    margin: 10px;
+    padding: 2px;
+    font-weight: 600;
+    font-size: 3rem;
+    text-shadow: 5px 5px 30px brown;
 }
 
 .parrafo{
     margin: 2px;
     padding: 10px;
     font-size: 2rem;
+    font-weight: 400;
 }
 
-.formulario{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.input{
-    margin: 10px;
-    padding: 10px;
-    font-size: 2rem;
-    border: 2px solid beige;
-    border-radius: 10px;
-    background-color: brown;
-}
-
-.button{
-    margin: 10px;
-    padding: 10px;
-    border: 0;
-    line-height: 1;
-    background-color: beige;
-    color: brown;
-    font-size: 1rem;
-    padding: .5rem;
-    border-radius: .5rem;
-    cursor: pointer;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-
-.tocar{
-    font-size: 1.5rem;
-    color: beige;
-    text-decoration: none;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 3rem;
-    background-color: beige;
-    color: brown;
-    border-bottom-left-radius: 2rem;
-    border-bottom-right-radius: 2rem;
-    border-top-right-radius: 2rem;
-    border-top-left-radius: 2rem;
-}
-
-h1{
-    font-size: 3rem;
-}
 
 main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
     padding: 2rem;
-    margin: 1rem;
+    margin: 0.5rem;
     text-align: center;
 }
 
@@ -101,8 +59,8 @@ main {
 
 .marcador {
     background-color: beige;
-    padding: 1rem 2rem;
-    border-radius: 1rem;
+    padding: 1.5rem 2rem;
+    border-radius: 1.5rem;
     position: relative;
     display: flex;
     align-items: center;
@@ -115,67 +73,144 @@ main {
     position: absolute;
     color: beige;
     background-color: brown;
-    line-height: 1;
+    line-height: 1.5;
     padding: .5rem;
-    border-radius: .5rem;
-    border: 2px solid beige;
+    border-radius: 1rem;
+    border: 3px solid beige;
 
 }
 
 .marcador .nombre-jugador {
-    right: 85%;
+    right: 80%;
 }
 
 .marcador .nombre-enemigo {
-    left: 85%;
+    left: 80%;
 }
 
 .marcador .puntos {
-    font-size: 1.6rem;
+    font-size: 2rem;
 }
 
 h2 {
     font-size: 1.2rem;
     font-weight: 400;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
 }
 
 .elige-tu-ataque {
-    margin-bottom: 2rem;
-    display: flex;
-    justify-content: center;
-    gap: 2rem;
+    margin-bottom: 1rem;
 }
 
 .ataques {
     display: flex;
-    justify-content: center;
     gap: 1rem;
 }
 
 .ataque {
-    font-size: 2rem;
+
     background-color: beige;
-    border: 0;
     padding: .5rem;
-    width: 100px;
+    width: 110px;
     height: 100px;
-    border-radius: .5rem;
-    cursor: pointer;
+    border-radius: 1.5rem;
+    border: double 10px brown;
 }
 
 .mensaje {
     margin-bottom: 2rem;
-    line-height: 2;
+    line-height: 1.8;
 }
 
 .mensaje .eleccion {
     color: brown;
     background-color: beige;
-    border-radius: .25rem;
-    padding-inline: .25rem;
+    border-radius: .5rem;
+    padding-inline: 1rem;
+}
+
+.button{
+    margin: 10px;
+    padding: 10px;
+    border: 0;
+    line-height: 1;
+    background-color: beige;
+    color: brown;
+    font-size: 1rem;
+    padding: .5rem;
+    border-radius: .5rem;
+    font-weight: 600;
+}
+
+a{
+    text-decoration: none;
 }
 
 .disabled {
     display: none;
+}
+
+.container-titulo{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo-juegos{
+    margin: 10px;
+    padding: 2px;
+    font-weight: 600;
+    font-size: 4rem;
+    text-shadow: 5px 5px 10px black;
+}
+
+.parrafo-juegos{
+    margin: 2px;
+    padding: 10px;
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: center;
+}
+
+.container-datos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.titulo-juegosD{
+    margin: 10px;
+    padding: 2px;
+    font-weight: 600;
+    font-size: 3rem;
+    text-shadow: 5px 5px 10px black;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.nombre{
+    margin: 10px;
+    padding: 10px;
+    font-size: 2rem;
+    font-weight: 600;
+    text-shadow: 5px 5px 10px black;
+}
+
+.img{
+    height: 300px;
+    width: 400px;
+    margin-bottom: 5px;
+    border-radius: 20px;
+    border: double 10px beige;
+}
+
+.edad, .minimo, .maximo, .material{
+    font-size: 1.5rem;
+    font-weight: 400;
+    padding: 2px;
+    margin: 2px;
 }
